feat: separate static and dynamic content of Makefile
Also redefine specification. Make test cases use centralized header file.

--- a/problems/p0/Makefile
+++ b/problems/p0/Makefile
@@ -1,33 +1,34 @@
 .PHONY: test generate clean reset
 
-bobcat_math.o: bobcat_math.cpp bobcat_math.h
-	$(CXX) -c bobcat_math.cpp
+
+help:
+	@echo "usage: make [command]"
+	@echo ""
+	@echo "command can be one of the following"
+	@echo ""
+	@echo "help - show this message."
+	@echo "generate - generate merge conflicts in this problem."
+	@echo "test - compile the test program and run it."
+	@echo "clean - remove artifacts from compilation."
+	@echo "reset - delete all generated files. THIS WILL DELETE YOUR ANSWER AS WELL."
 
 test: test_main
 	./test_main
 
-test_main: bobcat_math.o test_main.o tests/test_bobcat_math.o
-	$(CXX) test_main.o bobcat_math.o tests/test_bobcat_math.o -o test_main
+# begin: dyncmic content
+include dynamic.mk
+# end: dynamic content
 
 test_main.o: test_main.cpp
 	$(CXX) -c test_main.cpp
 
-tests/test_bobcat_math.o: tests/test_bobcat_math.cpp
-	$(CXX) -c tests/test_bobcat_math.cpp -o tests/test_bobcat_math.o
+test_main: test_main.o $(LIB_OBJS) $(TEST_CASE_OBJS)
+	$(CXX) $^ -o test_main
 
-generate:
-	cp ../common/vendors/catch2/catch.hpp ./catch.hpp
-	cp .template/bobcat_math.h ./
-	-git merge-file -p .template/bobcat_math.ours.cpp .template/bobcat_math.common.cpp .template/bobcat_math.theirs.cpp > bobcat_math.cpp
+tests/%.o: tests/%.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	-rm -f ./test_main
 	-rm -f ./*.o
 	-rm -f ./tests/*.o
-
-reset:
-	-rm -f ./*.o
-	-rm -f ./tests/*.o
-	-rm -f ./catch.hpp
-	-rm -f ./bobcat_math.h
-	-rm -f ./bobcat_math.cpp
